<resources>
    <string name="app_name">ProjectCakeMaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Touch to visit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_product">MainProductActivity</string>
    <string name="detail_cake">Mini cupcakes and small specialty flavored cupcakes need to be pre-ordered and in increments of a dozen. Please call our bakery or stop in today to place your custom order!</string>

</resources>
